language_tests/source_files/invalid/interface_properties_deferred.tr
interface Named {
    var name: string { get(&self) { "taro" } };
}

func main() {}
